[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
reqwest = {version= "0.11", features=["blocking", "cookies"]}
dotenv = "0.15"
clap = { version = "4.0.26", features = ["derive"] }
log = "0.4"
nom = "7.1.1"
env_logger = "0.10"
chrono = "0.4.23"
chrono-tz = "0.8.0"
